# QuantumCortex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
docs/: conf.py
examples/: basic_classification.py  hybrid_model_example.py
quantumcortex/: __init__.py
quantumcortex/circuits/: __init__.py  pqc.py  vqc.py
quantumcortex/core/: __init__.py  measurements.py  operators.py  quantum_state.py
quantumcortex/layers/: __init__.py  quantum_conv.py  quantum_perceptron.py  quantum_recurrent.py
quantumcortex/models/: __init__.py  hybrid_model.py  qnn_classifier.py  qnn_regressor.py
quantumcortex/training/: __init__.py  error_mitigation.py  hybrid_trainer.py  optimizer.py
quantumcortex/utils/: __init__.py  entanglement.py  kernel.py  qnlp.py
tests/: __init__.py  test_models.py  test_quantum_state.py  test_training.py  test_vqc.py
